Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                    <a href="https://github.com/BorceKhen/CSST-101-Advanced-Presentation-and-Reasoning" target="_blank" rel="noopener" class="btn btn-secondary">Visit my Github</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -172,16 +172,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Sample</h3>
-                        <p>Description</p>
-                        <div class="project-tech">
-                            <span>PL</span>
-                            <span>PL</span>
-                            <span>PL</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
+                        <button class="project-description-btn" onclick="location.href='#'">Description</button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -192,16 +183,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Sample</h3>
-                        <p>Description</p>
-                        <div class="project-tech">
-                            <span>PL</span>
-                            <span>PL</span>
-                            <span>PL</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
+                        <button class="project-description-btn" onclick="location.href='#'">Description</button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -212,16 +194,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Sample</h3>
-                        <p>Description</p>
-                        <div class="project-tech">
-                            <span>PL</span>
-                            <span>PL</span>
-                            <span>PL</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
+                        <button class="project-description-btn" onclick="location.href='#'">Description</button>
                     </div>
                 </div>
             </div>
